fixed whitespace issue

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
   font-family: "Lato", sans-serif;
+  min-width: fit-content;
 }
 
 h2 {
